--- a/04 - Javascript Tutorial Continued/index.html
+++ b/04 - Javascript Tutorial Continued/index.html
@@ -10,5 +10,6 @@
     <script src="script.js"></script>
     <script src="08-strings.js"></script>
     <script src="09-arrMethod.js"></script>
+    <script src="10-calculateTotal.js"></script>
   </body>
 </html>
