--- a/04 - Javascript Tutorial Continued/index.html
+++ b/04 - Javascript Tutorial Continued/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1>I am Day Two</h1>
     <script src="script.js"></script>
+    <script src="map.js"></script>
     <script src="08-strings.js"></script>
     <script src="09-arrMethod.js"></script>
     <script src="10-calculateTotal.js"></script>
