--- a/04 - Javascript Tutorial Continued/index.html
+++ b/04 - Javascript Tutorial Continued/index.html
@@ -9,6 +9,7 @@
     <h1>I am Day Two</h1>
     <script src="script.js"></script>
     <script src="map.js"></script>
+    <script src="find.js"></script>
     <script src="filter.js"></script>
     <script src="08-strings.js"></script>
     <script src="09-arrMethod.js"></script>
