--- a/04 - Javascript Tutorial Continued/index.html
+++ b/04 - Javascript Tutorial Continued/index.html
@@ -11,6 +11,7 @@
     <script src="map.js"></script>
     <script src="find.js"></script>
     <script src="filter.js"></script>
+    <script src="reduce.js"></script>
     <script src="08-strings.js"></script>
     <script src="09-arrMethod.js"></script>
     <script src="10-calculateTotal.js"></script>
