problem solving arr method

--- a/04 - Javascript Tutorial Continued/index.html
+++ b/04 - Javascript Tutorial Continued/index.html
@@ -13,6 +13,7 @@
     <script src="filter.js"></script>
     <script src="reduce.js"></script>
     <script src="08-strings.js"></script>
+    <script src="data.js"></script>
     <script src="09-arrMethod.js"></script>
     <script src="10-calculateTotal.js"></script>
   </body>
