--- a/04 - Javascript Tutorial Continued/index.html
+++ b/04 - Javascript Tutorial Continued/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>I am Day Two</h1>
     <script src="dateObject.js"></script>
-    <!-- <script src="script.js"></script>
+    <script src="script.js"></script>
     <script src="mathObject.js"></script>
     <script src="map.js"></script>
     <script src="find.js"></script>
@@ -17,6 +17,6 @@
     <script src="08-strings.js"></script>
     <script src="data.js"></script>
     <script src="09-arrMethod.js"></script>
-    <script src="10-calculateTotal.js"></script> -->
+    <script src="10-calculateTotal.js"></script>
   </body>
 </html>
