--- a/05 - DOM/index.html
+++ b/05 - DOM/index.html
@@ -5,6 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM-Practice</title>
     <!-- <link rel="stylesheet" href="global.css"> -->
+    <style>
+        .color
+        {
+            background: brown;
+            color: white
+        }
+        .text{
+            font-size: 2rem;
+            letter-spacing: 1rem;
+        }
+        .red{
+            background: burlywood;
+            color: black;
+        }
+        .blue{
+            background: rgb(49, 49, 92);
+            color: aliceblue;
+        }
+    </style>
 </head>
 <body>
     <!-- <h1 id="special">DOM</h1> -->
@@ -23,11 +42,18 @@
             <h2>Second Heading</h2>
         </div>
     </div> -->
-    <ul>
+    <!-- <ul>
         <li class="first" id="special">I have class of first</li>
         <a href="first.html" id="link">Random Link</a>
         <li>I have no attributes</li>
-    </ul>
+    </ul> -->
+    <!-- <h1 id="first" class="color">I am first element</h1>
+    <h1 id="second">I am second element</h1>
+    <h1 id="third">I am third element</h1> -->
+    <div id="result">
+        <h1 class="red">I am child of result</h1>
+    </div>
+    <!-- Javascript -->
     <script src="script.js"></script>
 </body>
 </html>
