--- a/05 - DOM/index.html
+++ b/05 - DOM/index.html
@@ -47,12 +47,14 @@
         <a href="first.html" id="link">Random Link</a>
         <li>I have no attributes</li>
     </ul> -->
-    <h1 id="first" class="color">I am first element</h1>
+    <!-- <h1 id="first" class="color">I am first element</h1>
     <h1 id="second">I am second element</h1>
-    <h1 id="third">I am third element</h1>
+    <h1 id="third">I am third element</h1> -->
+    <h1>Hello Js</h1>
     <div id="result">
-        <h1 class="red">I am child of result</h1>
+        <h1>I am child of result</h1>
     </div>
+    <!-- <h1>First Heading</h1> -->
     <!-- Javascript -->
     <script src="script.js"></script>
 </body>
