--- a/05 - DOM/index.html
+++ b/05 - DOM/index.html
@@ -50,11 +50,18 @@
     <!-- <h1 id="first" class="color">I am first element</h1>
     <h1 id="second">I am second element</h1>
     <h1 id="third">I am third element</h1> -->
-    <h1>Hello Js</h1>
+    <!-- <h1>Hello Js</h1>
     <div id="result">
         <h1>I am child of result</h1>
-    </div>
+    </div> -->
     <!-- <h1>First Heading</h1> -->
+    <ul id="first">
+        <li class="item">List item</li>
+        <li>List item</li>
+    </ul>
+    <div id="second">
+        I have some text content
+    </div>
     <!-- Javascript -->
     <script src="script.js"></script>
 </body>
