--- a/05 - DOM/index.html
+++ b/05 - DOM/index.html
@@ -23,9 +23,38 @@
             background: rgb(49, 49, 92);
             color: aliceblue;
         }
+        .title{
+            background: burlywood;
+            color: black;
+            font-size: 3rem;
+            text-transform: capitalize;
+        }
+        /* a{
+            display: inline-block;
+            margin-top: 100vh;
+        } */
+        .btn
+        {
+            background: rgb(116, 82, 18);
+            border: none;
+            color: aliceblue;
+            padding: 1rem;
+        }
     </style>
 </head>
 <body>
+
+    <!-- <div class="container">
+       <h1 class="heading">I am inside container</h1>
+    </div>
+    <button class="btn">Click Me</button> -->
+    <!-- <div class="container">
+        <ul class="list-items">
+            <li class="item"><a href="#" class="link">Sahara</a></li>
+            <li class="item"><a href="#" class="link">Sahara</a></li>
+            <li class="item"><a href="#" class="link">Sahara</a></li>
+        </ul>
+    </div> -->
     <!-- <h1 id="special">DOM</h1> -->
     <!-- <h2>Fruits</h2>
     <ul id="result">
@@ -55,14 +84,37 @@
         <h1>I am child of result</h1>
     </div> -->
     <!-- <h1>First Heading</h1> -->
-    <ul id="first">
+    <!-- <ul id="first">
         <li class="item">List item</li>
         <li>List item</li>
     </ul>
     <div id="second">
         I have some text content
-    </div>
+    </div> -->
+    <!-- <div class="random">
+        I am some random div
+    </div> -->
+    <!-- Events -->
+    <!-- <h2>Events in Js</h2>
+    <button class="btn">Click</button> -->
+    <!-- <p onclick="this.classList.add('red')">The old style</p> -->
+    <!-- <input type="text" id="name" /> -->
+    <!-- <button class="btn">First Button</button>
+    <button class="btn">Second <strong>
+        button <strong>More nested</strong>
+    </strong></button>
+    <button class="btn">Third Button</button> -->
+    <!-- <h2>Events in Js</h2>
+    <a href="#" id="link">random link</a> -->
+    <!-- Forms -->
+    <form action="" id="form">
+        <input type="text" id="names" />
+        <input type="password" name="" id="password" />
+        <input type="submit" value="submit" />
+    </form>
     <!-- Javascript -->
+    <script src="forms.js"></script>
+    <script src="events.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
