--- a/05 - DOM/index.html
+++ b/05 - DOM/index.html
@@ -107,11 +107,12 @@
     <!-- <h2>Events in Js</h2>
     <a href="#" id="link">random link</a> -->
     <!-- Forms -->
-    <form action="" id="form">
+    <!-- <form action="" id="form">
         <input type="text" id="names" />
         <input type="password" name="" id="password" />
         <input type="submit" value="submit" />
-    </form>
+    </form> -->
+    <h1>Local Storage</h1>
     <!-- Javascript -->
     <script src="forms.js"></script>
     <script src="events.js"></script>
